Version 0.3.2.0
===============
+ AMD64, i386: MUL, DIV, MOD, LSH, and RSH use push & pop only if necessary
+ SPARC: optimized MUL, DIV, and MOD for some immediate values
+ SPARC: call operation does not use the temporary register, i.e., it's 10%
faster
+ SPARC: fixed stack corruption and the appropriate test case is included
+ changing of large immediate values into a MOV and register-based operations
became part of the jitlib-core
+ fixed jit_print_ops()
+ new operation MSG

Version 0.3.1.0
===============
+ support for SPARC

Version 0.3.0.0
===============
+ support for an unlimited number of registers
+ automatic buffer size adjustment, i.e., it is not necessary set the size of
the output buffer in advance
+ particular parts of x86 and AMD64 code has been merged
+ configurable register allocator which can shared by multiple processor types
+ red-black trees are used to implement register mappings and sets
+ API changes
	+ jit_init has only one argument
	+ jit_call has the same meaning as the jit_finish (jit_finish was
	removed)

Version 0.2.5.0
================
+ support for AMD64 (x86_64) processors
+ CPU detection

Version 0.2.4.2
===============
+ initial release
+ only x86 based processors are supported