@@ -38,7 +38,7 @@ Registers
 
 MyJIT supports arbitrary number of register, however, this number have to be specified in advance. If the number of requested registers is higher than the number of available hardware registers, MyJIT can emulate them. Nevertheless, to achieve the best performance, it is good practice to set the number of used registers as low as possible. All registers are denoted by numbers from 0 up to n-1. To refer to these registers you should use the macro ``R(x)``.
 
-Besides, MyJIT has two special purpose registers---JIT_FP and JIT_RETREG. JIT_FP serves as the frame pointer and is used to access allocated memory on the stack. The JIT_RETREG can be used to handle the return values. It can be used to read the return value right after the return from the function. Otherwise the value of the register is undefined. Furthermore, you can use this register right before the return from the function to set the return value more efficiently. If the value is set earlier, it can lead to undefined behavior.
+Besides, MyJIT has two special purpose registers---R_FP and R_OUT. R_FP serves as the frame pointer and is used to access allocated memory on the stack. The R_OUT can be used to handle the return values. It can be used to read the return value right after the return from the function. Otherwise the value of the register is undefined. Furthermore, you can use this register right before the return from the function to set the return value more efficiently. If the value is set earlier, it can lead to undefined behavior.
 
 
 Transfer Operations
@@ -151,7 +151,7 @@ The following operations and auxiliary macros helps to create a function, read i
 + ``arg`` -- this is not an actual operation but rather a auxiliary macro which returns an identifier of the argument (interger number)
 + to read an argument use ``getarg`` operation, which accepts three arguments register and two immediate values (in this order). The register is the destination register where the input argument is stored. The first immediate value is the value generated by the operation ``arg`` and identifies argument of the function. The second immediate value defines size of the argument, e.g., 1, 2, 4, or 8 bytes.
 
-+ ``allocai`` reserves space on the stack which has at least size specified by its operand. Note that the stack space may be aligned to some higher value. The macro returns an integer number which is an *offset from the frame pointer JIT_FP!*
++ ``allocai`` reserves space on the stack which has at least size specified by its operand. Note that the stack space may be aligned to some higher value. The macro returns an integer number which is an *offset from the frame pointer R_FP!*
 
 
 
